--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body>
     <div class="app-container">
-        <div class="app-icon"></div>
+        <div class="app.png"></div>
         <h1 class="app-name">非官方软件</h1>
         <p class="app-description">让设备扩展功能。它具有一些独特的功能和特性。</p>
         <a href="https://gitee.com/Libra66/system-toolbox-/releases/tag/V1.X" class="download-link">下载</a>
