--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             text-align: center;
         }
 
-        .app-icon {
+        .app.png {
             width: 150px;
             height: 150px;
             background-color: #ddd;
