--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             text-align: center;
         }
 
-        .app.png {
+        .app-icon {
             width: 150px;
             height: 150px;
             background-color: #ddd;
@@ -54,8 +54,7 @@
 </head>
 
 <body>
-    <div class="app-container">
-        <div class="app.png"></div>
+    <div class="app-container"><img src="app.png" alt="应用程序图标" class="app-icon">
         <h1 class="app-name">非官方软件</h1>
         <p class="app-description">让设备扩展功能。它具有一些独特的功能和特性。</p>
         <a href="https://gitee.com/Libra66/system-toolbox-/releases/tag/V1.X" class="download-link">下载</a>
