--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="app-container"><img src="app.png" alt="应用程序图标" class="app-icon">
         <h1 class="app-name">系统工具箱，扩展你的设备</h1>
         <p class="app-description">让设备扩展功能。它具有一些独特的功能和特性。</p>
-        <a href="https://gitee.com/Libra66/system-toolbox-/releases/tag/V1.X" class="download-link">下载</a>
+        <a href="https://www.123pan.com/s/i5OUVv-S9Ild.html" class="download-link">下载</a>
     </div>
 </body>
 
