--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <h2>简介</h2>
         <p>系统工具箱是一款扩展管理系统的软件，具有内存优化和扩展系统的功能。内存优化可以释放系统内存，提高运行速度和稳定性。扩展系统可以帮助您添加自定义插件、扩展桌面功能、设置个性化主题等，基于PIO框架。</p>
         <p>点击下方按钮下载文件：</p>
-        <a href="https://www.123pan.com/s/i5OUVv-S9Ild.html" class="cta-button">下载</a>
+        <a href="https://www.123pan.com/s/i5OUVv-S9Ild.html" class="cta-button">下载（Downloads in China only）</a>
+        <a href="https://github.com/libra12367/SYSTEMTOOLS/releases/" class="cta-button">Download（Support all）</a>
     </div>
 </body>
 </html>
