--- a/index_english.html
+++ b/index_english.html
@@ -56,7 +56,7 @@
         <p>The system toolbox is a software for expanding the management system, which has the functions of memory optimization and system expansion. Memory optimization frees up system memory and improves speed and stability. The extension system can help you add custom plug-ins, extend desktop functionality, set personalized themes, and more, based on the Scene framework.</p>
         <p>Click the button below to download the file:</p>
         <a href="https://github.com/libra12367/SYSTEMTOOLS/releases/" class="cta-button">Download</a>
-        <a href="index_english.html" class="cta-button">English website</a>
+        <a href="index.html" class="cta-button">Chinese website</a>
     </div>
 </body>
 </html>
